--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* color scheme: http://paletton.com/#uid=52T0G0kl7m0aAx-fXrhq5h8vubF */
 
 html {
-	font-family: sans-serif;
+	font-family: 'PT Sans', serif;
 	height: 100%;
 }
 body {
@@ -11,6 +11,10 @@ body {
 	min-height: 100%;
 }
 
+h1, h2, h3 {
+	font-family: 'PT Serif', sans-serif;
+	font-weight: 700;
+}
 header {
 	background-color: #8DA739;
 	padding: 1em;
@@ -55,6 +59,7 @@ h2 {
 button {
 	padding: 0.4em 1em;
 	font-size: 1em;
+	font-family: inherit;
 }
 
 .stats-container {
