--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
 /* color scheme: http://paletton.com/#uid=52T0G0kl7m0aAx-fXrhq5h8vubF */
 
 html {
-	font-family: 'PT Sans', serif;
+	font-family: 'PT Sans', sans-serif;
+	font-size: 62.5%;
+	font-size: 16px;
 	height: 100%;
 }
+
+@media screen and (max-width: 600px) {
+	html {
+		font-size: 14px;
+	}
+}
+
 body {
 	margin: 0;
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
+	min-width: 320px;
 }
 
 h1, h2, h3 {
@@ -17,32 +27,32 @@ h1, h2, h3 {
 }
 header {
 	background-color: #8DA739;
-	padding: 1em;
+	padding: 1rem;
 }
 h1 {
 	margin: 0;
 }
 
-#body-container {
+.content-container {
 	flex: 1;
 	display: flex;
-/* 	flex-wrap: wrap; */
+ 	flex-wrap: wrap; 
 }
 section {
 	flex: 1;
-	padding: 0.8em;
+	padding: 0.8rem;
 }
 #instructions {
-	min-width: 300px;
+	min-width: 250px;
 	background-color: #52A464;
 }
 #results {
-	min-width: 500px;
+	min-width: 320px;
 	background-color: #2D8540;
 }
 
 h2 {
-	margin: 0.3em 0;
+	margin: 0.5rem 0;
 }
 #raw-data {
 	width: 100%;
@@ -57,25 +67,27 @@ h2 {
 	color: white;
 }
 button {
-	padding: 0.4em 1em;
-	font-size: 1em;
+	padding: 0.4rem 1rem;
+	font-size: 1rem;
 	font-family: inherit;
 }
 
 .stats-container {
 	display: flex;
 	justify-content: space-evenly;
+	flex-wrap: wrap;
 }
 .stats-box {
-	flex: 1;
-	max-width: 250px;
+	flex: 1 0;
+	min-width: 15rem;
+	max-width: 18rem;
 	padding: 0 0.5em;
-	margin: 0.5em;
+	margin: 0.5rem;
 	background-color: aliceblue;
 }
 .stats-box h3,
 .stats-box p {
-	margin: 0.4em 0;
+	margin: 0.5rem 0;
 }
 
 .stats-list {
@@ -85,8 +97,8 @@ button {
 }
 .stats-list li {
 	background-color: lightblue;
-	padding: 0.2em 0.5em;
-	margin: 0.3em 0;
+	padding: 0.2rem 0.5rem;
+	margin: 0.3rem 0;
 	box-sizing: border-box;
 	border-bottom: 2px solid steelblue;
 }
@@ -94,7 +106,7 @@ button {
 	border-bottom-style: dashed;
 }
 .stat {
-	font-size: 1.8em;
+	font-size: 1.8rem;
 }
 
 #results {
@@ -111,7 +123,7 @@ button {
 footer {
 	background-color: #4C6E8D;
 	color: white;
-	padding: 0.8em;
+	padding: 0.8rem;
 }
 footer p {
 	margin: 0;
