--- a/style.css
+++ b/style.css
@@ -3,22 +3,23 @@
 html {
 	font-family: 'PT Sans', sans-serif;
 	font-size: 62.5%;
-	font-size: 16px;
+	color: #222;
 	height: 100%;
-}
-
-@media screen and (max-width: 600px) {
-	html {
-		font-size: 14px;
-	}
 }
 
 body {
 	margin: 0;
 	display: flex;
 	flex-direction: column;
+	font-size: 1.6rem;
 	min-height: 100%;
 	min-width: 320px;
+}
+
+@media screen and (max-width: 600px) {
+	body {
+		font-size: 1.4rem;
+	}
 }
 
 h1, h2, h3 {
@@ -27,7 +28,7 @@ h1, h2, h3 {
 }
 header {
 	background-color: #8DA739;
-	padding: 1rem;
+	padding: 1.5rem;
 }
 h1 {
 	margin: 0;
@@ -40,7 +41,7 @@ h1 {
 }
 section {
 	flex: 1;
-	padding: 0.8rem;
+	padding: 1.5rem;
 }
 #instructions {
 	min-width: 250px;
@@ -67,8 +68,8 @@ h2 {
 	color: white;
 }
 button {
-	padding: 0.4rem 1rem;
-	font-size: 1rem;
+	padding: .8rem 1.6rem;
+	font-size: 1.8rem;
 	font-family: inherit;
 }
 
@@ -79,15 +80,15 @@ button {
 }
 .stats-box {
 	flex: 1 0;
-	min-width: 15rem;
-	max-width: 18rem;
-	padding: 0 0.5em;
-	margin: 0.5rem;
+	min-width: 20rem;
+	max-width: 25rem;
+	padding: 0 1em;
+	margin: .8rem;
 	background-color: aliceblue;
 }
 .stats-box h3,
 .stats-box p {
-	margin: 0.5rem 0;
+	margin: .8rem 0;
 }
 
 .stats-list {
@@ -97,8 +98,8 @@ button {
 }
 .stats-list li {
 	background-color: lightblue;
-	padding: 0.2rem 0.5rem;
-	margin: 0.3rem 0;
+	padding: 0.4rem 0.8rem;
+	margin: .8rem 0;
 	box-sizing: border-box;
 	border-bottom: 2px solid steelblue;
 }
@@ -106,7 +107,7 @@ button {
 	border-bottom-style: dashed;
 }
 .stat {
-	font-size: 1.8rem;
+	font-size: 2.4rem;
 }
 
 #results {
@@ -123,10 +124,10 @@ button {
 footer {
 	background-color: #4C6E8D;
 	color: white;
-	padding: 0.8rem;
+	padding: .8rem 1rem;
 }
 footer p {
-	margin: 0;
+	margin: .8rem 0;
 	text-align: center;
 }
 footer a {
