[#2]: Adds ability to select other starting balances
Also fixes bug with logo not displaying properly on mobile

--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ section {
 h2 {
 	margin: 0.5rem 0;
 }
+
+.form-field {
+	margin: .8rem 0;
+}
 #raw-data {
 	width: 100%;
 	background-color: transparent;
