--- a/docs/style.css
+++ b/docs/style.css
@@ -4,7 +4,7 @@ html {
 	font-family: 'PT Sans', sans-serif;
 	font-size: 62.5%;
 	color: #333;
-	background-color: #52A464;
+	background-color: #CCC;
 	height: 100%;
 }
 
@@ -28,14 +28,15 @@ h1, h2, h3 {
 	font-weight: 700;
 }
 header {
-	background-color: #b7cf68;
-	padding: 1.5rem;
+	background-color: #4C6E8D;
+	color: white;
+	padding: 1.5rem 3rem;
 }
 h1 {
 	margin: 0;
 }
 .logo {
-  vertical-align: middle;
+	display: block;
 }
 
 .content-container {
@@ -49,11 +50,10 @@ section {
 }
 #instructions {
 	min-width: 250px;
-	background-color: #52A464;
 }
 #results {
 	min-width: 320px;
-	background-color: #2D8540;
+	background-color: #FFF;
 }
 
 h2 {
@@ -130,8 +130,6 @@ button {
 }
 
 footer {
-	/* background-color: #4C6E8D;
-	color: white; */
 	padding: .8rem 1rem;
 }
 footer p {
