--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,7 @@
 /* color scheme: http://paletton.com/#uid=52T0G0kl7m0aAx-fXrhq5h8vubF */
 
 html {
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'PT Sans', 'Segoe UI', Optima, Tahoma, Geneva, sans-serif;
 	font-size: 62.5%;
 	color: #333;
 	background-color: #CCC;
@@ -23,20 +23,23 @@ body {
 	}
 }
 
-h1, h2, h3 {
-	font-family: 'PT Serif', sans-serif;
+h1, h3, h4 {
+	font-family: 'PT Serif', Baskerville, Georgia, serif;
 	font-weight: 700;
 }
 header {
 	background-color: #4C6E8D;
 	color: white;
-	padding: 1.5rem 3rem;
 }
 h1 {
 	margin: 0;
 }
 .logo {
 	display: block;
+}
+header,
+section {
+	padding: 1.5rem 3rem;
 }
 
 .content-container {
@@ -46,7 +49,6 @@ h1 {
 }
 section {
 	flex: 1;
-	padding: 1.5rem;
 }
 #instructions {
 	min-width: 250px;
@@ -57,7 +59,16 @@ section {
 }
 
 h2 {
+	margin: 0.8rem 0;
+	font-size: inherit;
+	text-transform: uppercase;
+}
+h3 {
 	margin: 0.5rem 0;
+	font-size: 2.4rem;
+}
+h4 {
+	margin: 0.8rem 0;
 }
 
 .form-field {
@@ -74,10 +85,10 @@ h2 {
 	margin: 0.5rem 0;
 }
 
-#raw-data {
-	width: 100%;
-	background-color: transparent;
+.appearance-textfield {
+	background-color: #FFF;
 	border: 1px solid #4C6E8D;
+	font: inherit;
 	resize: none;
 }
 
@@ -90,23 +101,32 @@ button {
 	font-family: inherit;
 	cursor: pointer;
 }
+.full-width {
+	display: block;
+	width: 100%;
+}
 
-.stats-container {
+.rowbox-container {
 	display: flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
 }
-.stats-box {
+.rowbox-box {
 	flex: 1 0;
-	min-width: 20rem;
-	max-width: 25rem;
-	padding: 0 1em;
-	margin: .8rem;
+	min-width: 15rem;
+	max-width: 30rem;
+	padding: 0 1.6rem;
+	margin: 0.8rem;
 	background-color: aliceblue;
 }
-.stats-box h3,
-.stats-box p {
-	margin: .8rem 0;
+.rowbox-wide {
+	min-width: 20rem;
+}
+.rowbox-content {
+	margin: 0.8rem 0;
+}
+.rowbox-content p {
+	margin: 0.8rem 0;
 }
 
 .stats-list {
@@ -121,7 +141,7 @@ button {
 	box-sizing: border-box;
 	border-bottom: 2px solid steelblue;
 }
-.stats-box:last-child li {
+.stats-list-dashed li {
 	border-bottom-style: dashed;
 }
 .stat {
