--- a/docs/style.css
+++ b/docs/style.css
@@ -74,15 +74,23 @@ h4 {
 .form-field {
 	margin: .8rem 0;
 }
+.errors {
+	position: absolute;
+}
 .form-error {
 	padding: 0.2rem 2rem;
-	margin-bottom: 1rem;
+	margin-top: 1rem;
 	border-top: 2px solid #FF0000;
 	background-color: #FCC;
 }
 .form-error p,
 .form-error pre {
 	margin: 0.5rem 0;
+}
+.pre-wrap {
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
+	word-wrap: break-word;
 }
 
 .appearance-textfield {
@@ -104,6 +112,12 @@ button {
 .full-width {
 	display: block;
 	width: 100%;
+}
+.icon-button {
+	float: right;
+	padding: 0 0.8rem;
+	background: none;
+	color: #333;
 }
 
 .rowbox-container {
