SCSS builds now happen with Webpack

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,6 @@
 $color-ink: #333;
 $color-primary: #4C6E8D;
+$color-white: #FFF;
 
 $font-sans-serif: 'PT Sans', 'Segoe UI', Optima, Tahoma, Geneva, sans-serif;
 $font-serif: 'PT Serif', Baskerville, Georgia, serif;
