--- a/src/style.scss
+++ b/src/style.scss
@@ -12,10 +12,8 @@ html {
 
 body {
 	margin: 0;
-	display: flex;
-	flex-direction: column;
 	font-size: 1.6rem;
-	min-height: 100%;
+	height: 100%;
 	min-width: 320px;
 }
 
@@ -23,6 +21,12 @@ body {
 	body {
 		font-size: 1.4rem;
 	}
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
 }
 
 h3,
@@ -38,6 +42,12 @@ h1 {
 	margin: 0;
 	font-size: 2rem;
 	line-height: 2rem;
+
+	a {
+		display: inline-block;
+		color: inherit;
+		text-decoration: inherit;
+	}
 }
 .logo {
 	vertical-align: top;
