--- a/src/style.scss
+++ b/src/style.scss
@@ -113,13 +113,10 @@ h4 {
 }
 .pre-wrap {
 	white-space: pre-wrap;
-	white-space: -moz-pre-wrap;
 	word-wrap: break-word;
 }
 
 .appearance-textfield {
-	-webkit-appearance: none;
-	-moz-appearance: none;
 	appearance: none;
 	padding: 0.2rem 0.4rem;
 	background-color: $color-white;
@@ -288,12 +285,10 @@ footer {
 }
 
 .hide-steppers {
-	-moz-appearance: textfield;
+	appearance: textfield;
 
 	&::-webkit-inner-spin-button,
 	&::-webkit-outer-spin-button {
-		-webkit-appearance: none;
-		-moz-appearance: none;
 		appearance: none;
 		margin: 0;
 	}
