Moves footer links to header

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,3 +16,6 @@ $font-serif:      'PT Serif', Baskerville, Georgia, serif;
 
 // Sizes
 $size-border: 1.5px;
+
+// Transitions
+$transition-fast: 0.2s;
