--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -142,6 +142,10 @@ h4 {
 		background-color: #EEE;
 		color: #555;
 	}
+
+	&:not(:placeholder-shown):invalid {
+		border-color: $color-error;
+	}
 }
 
 button {
