Switches highcharts to styled mode

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 /* color scheme: http://paletton.com/#uid=52T0G0kl7m0aAx-fXrhq5h8vubF */
 
 @import 'variables';
+@import 'highcharts-theme';
 
 @media screen and (max-width: 400px) {
 	.hide-below-s {
