--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,3 @@
-/* color scheme: http://paletton.com/#uid=52T0G0kl7m0aAx-fXrhq5h8vubF */
-
 @import 'variables';
 @import 'highcharts-theme';
 
@@ -30,10 +28,24 @@ body {
 	}
 }
 
-.wrapper {
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
+@media screen and (min-width: 720px) {
+	.wrapper {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+	}
+
+	.content-container {
+		flex: 1;
+		display: flex;
+	}
+
+	section {
+		flex: 1;
+		height: 100%;
+		box-sizing: border-box;
+		overflow: auto;
+	}
 }
 
 h3,
@@ -49,7 +61,7 @@ header {
 
 	@media screen and (max-width: 660px) {
 		& {
-			display: unset;
+			display: block;
 		}
 
 		.header-links a {
@@ -79,22 +91,8 @@ h1 {
 	padding: 1.5rem 3rem;
 }
 
-.content-container {
-	flex: 1;
-	display: flex;
- 	flex-wrap: wrap; 
-}
-section {
-	flex: 1;
-}
 .section-bg-white {
 	background-color: $color-white;
-}
-#instructions {
-	min-width: 250px;
-}
-#results {
-	min-width: 320px;
 }
 
 h2 {
@@ -137,11 +135,13 @@ h4 {
 	resize: none;
 	border-radius: 0;
 	overflow-x: hidden; // Firefox adds extra space for a scrollbar
+	box-shadow: none;
 
 	&:disabled {
 		border-color: scale-color($color-primary, $saturation: -50%, $lightness: 30%);
 		background-color: #EEE;
 		color: #555;
+		opacity: 1;
 	}
 
 	&:not(:placeholder-shown):invalid {
