--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,6 +18,8 @@ $font-serif:      'PT Serif', Baskerville, Georgia, serif;
 
 // Sizes
 $size-border: 1.5px;
+$size-page-padding-horizontal: 3.2rem;
+$size-page-padding-vertical: $size-page-padding-horizontal / 2;
 
 // Transitions
 $transition-fast: 0.2s;
