--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -354,6 +354,12 @@ footer {
 	}
 }
 
+.loader {
+	text-align: center;
+	font-size: 2rem;
+	margin: 6.4rem;
+}
+
 .hide-steppers {
 	appearance: textfield;
 
