--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'layout';
 @import 'highcharts-theme';
 
 @media screen and (max-width: 400px) {
@@ -12,39 +13,17 @@ html {
 	font-size: 10/16 * 100%; // Make 1rem == 10px on typical browsers
 	color: $color-ink;
 	background-color: #D7E4D6;
-	height: 100%;
+	scroll-behavior: smooth;
 }
 
 body {
 	margin: 0;
 	font-size: 1.6rem;
-	height: 100%;
-	min-width: 320px;
 }
 
 @media screen and (max-width: 600px) {
 	body {
 		font-size: 1.4rem;
-	}
-}
-
-@media screen and (min-width: 720px) {
-	.wrapper {
-		display: flex;
-		flex-direction: column;
-		height: 100%;
-	}
-
-	.content-container {
-		flex: 1;
-		display: flex;
-	}
-
-	section {
-		flex: 1;
-		height: 100%;
-		box-sizing: border-box;
-		overflow: auto;
 	}
 }
 
@@ -243,34 +222,6 @@ kbd {
 
 a {
 	color: $color-royalblue;
-}
-
-.rowbox-container {
-	display: flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-	margin: 0 -0.8rem;
-}
-.rowbox-box {
-	flex: 1 0;
-	min-width: 15rem;
-	max-width: 30rem;
-	padding: 0 1.6rem;
-	margin: 0.8rem;
-	background-color: $color-white;
-}
-.section-bg-white .rowbox-box {
-	background-color: #E7FFE8;
-}
-.rowbox-wide {
-	min-width: 20rem;
-}
-.rowbox-content {
-	&,
-	p,
-	pre {
-		margin: 0.8rem 0;
-	}
 }
 
 .logo {
