Adds card component; PWA only in prod; styles instruction list

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $color-green:      #27BC68;
 $color-royalblue:  #005DBA;
 
 $color-primary:    $color-green;
+$color-secondary:  $color-royalblue;
 $color-error:      $color-rose;
 $color-message:    change-color($color-error, $hue: hue($color-royalblue));
 
