Adds rounded corners and line transitions

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -23,5 +23,7 @@ $size-line: 2px;
 $size-page-padding-horizontal: 3.2rem;
 $size-page-padding-vertical: $size-page-padding-horizontal / 2;
 
+$border-radius: 0.8rem;
+
 // Transitions
 $transition-fast: 0.2s;
