--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,7 +38,7 @@ header {
 	display: flex;
 	flex-wrap: wrap;
 
-	@media screen and (max-width: 660px) {
+	@media screen and (max-width: 700px) {
 		& {
 			display: block;
 		}
@@ -86,6 +86,10 @@ h3 {
 }
 h4 {
 	margin: 0.8rem 0;
+}
+
+p {
+	font-size: inherit;
 }
 
 .color-error {
