--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,21 +10,19 @@
 
 html {
 	font-family: $font-sans-serif;
-	font-size: 10/16 * 100%; // Make 1rem == 10px on typical browsers
+	font-size: $font-size-root;
 	color: $color-ink;
 	background-color: #D7E4D6;
 	scroll-behavior: smooth;
+
+	@media screen and (max-width: 600px) {
+		font-size: 14/16 * $font-size-root;
+	}
 }
 
 body {
 	margin: 0;
 	font-size: 1.6rem;
-}
-
-@media screen and (max-width: 600px) {
-	body {
-		font-size: 1.4rem;
-	}
 }
 
 h3,
@@ -86,10 +84,6 @@ h3 {
 }
 h4 {
 	margin: 0.8rem 0;
-}
-
-p {
-	font-size: inherit;
 }
 
 .color-error {
