Partially switches to highcharts-vue
[skip ci]

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -349,7 +349,7 @@ $header-links-padding-horizontal: 1.6rem;
 	display: flex;
 	flex-direction: column;
 }
-#chart {
+.chart {
 	width: 100%;
 	min-height: 330px;
 	background-color: $color-white;
